Bug 1596916 - Make `NativeKey` stop dispatching `eKeyPress` event when the key does not produce a character with `AltGr` key r=m_kato,smaug

On Windows, `AltGr` modifier state is represented with activating both
`Alt` and `Ctrl` modifiers.  I.e., when `AltGr` is pressed, any shortcut
keys whose modifier require `Control` and/or `Alt` because `NativeKey`
needs to consume both flags and set modifier state to only `AltGraph`.

That means that we don't need to dispatch `eKeyPress` event when `AltGr` key
is pressed and the key does not produce a character since we've stopped
dispatching non-printable `keypress` events on web content.

See the automated test changes for the detail in chrome script handling for
its detail.

Differential Revision: https://phabricator.services.mozilla.com/D68311